overflow fix body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@ html {
 
 body {
   position: relative;
+  overflow-x: hidden;
 }
 
 button {
